--- a/tipper/index.html
+++ b/tipper/index.html
@@ -14,21 +14,8 @@
 	<body>
 
 		<!-- Header -->
-			<header id="header" class="alt">
-                <div class="logo"><a href="index.html">The Tipper <span>Restaurant & Review Room</span></a></div>
-				<a href="#menu">Menu</a>
-			</header>
-
-		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About us</a></li>
-					<li><a href="menu.html">Menu</a></li>
-					<li><a href="contact.html">Contact us</a></li>
-					<li><a href="join.html">Join us</a></li>
-				</ul>
-			</nav>
+            <div class="header">
+            </div>
 
 		<!-- Banner -->
 			<section id="banner">
@@ -119,16 +106,8 @@
 			</div>
 
 		<!-- Footer -->
-			<footer id="footer">
-				<div class="copyright">
-					<ul class="icons">
-						<li><a href="https://twitter.com/TheTipper" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com/TheTipperRestaurant/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/thetipper_love/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					</ul>
-					<p>Design: Urban by <a href="https://templated.co">TEMPLATED</a>.</p>
-				</div>
-			</footer>
+			<div class="footer">
+			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -137,6 +116,7 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/includes.js"></script>
 
 	</body>
 </html>
