Refactor more header and footer

--- a/tipper/join.html
+++ b/tipper/join.html
@@ -13,22 +13,9 @@
 	</head>
 	<body class="subpage">
 
-		<!-- Header -->
-			<header id="header">
-                <div class="logo"><a href="index.html">The Tipper <span>Restaurant & Review Room</span></a></div>
-				<a href="#menu">Menu</a>
-			</header>
-
-		<!-- Nav -->
-            <nav id="menu">
-                <ul class="links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About us</a></li>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="contact.html">Contact us</a></li>
-                    <li><a href="join.html">Join us</a></li>
-                </ul>
-            </nav>
+        <!-- Header -->
+            <div class="header">
+            </div>
 
 		<!-- Main -->
 			<div id="main">
@@ -77,17 +64,9 @@
 
 			</div>
 
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="copyright">
-                    <ul class="icons">
-						<li><a href="https://twitter.com/TheTipper" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com/TheTipperRestaurant/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/thetipper_love/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					</ul>
-					<p>Design: Urban by <a href="https://templated.co">TEMPLATED</a>.</p>
-				</div>
-			</footer>
+        <!-- Footer -->
+			<div class="footer">
+			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -96,6 +75,7 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/includes.js"></script>
 
 	</body>
 </html>
