Fix styling issues

--- a/tipper/parts/header.html
+++ b/tipper/parts/header.html
@@ -1,12 +1,10 @@
 <html>
 
-    <!-- Header -->
-    <header id="header" class="alt">
+    <header id="header">
         <div class="logo"><a href="index.html">The Tipper <span>Restaurant & Review Room</span></a></div>
         <a href="#menu">Menu</a>
     </header>
 
-    <!-- Nav -->
     <nav id="menu">
         <ul class="links">
             <li><a href="index.html">Home</a></li>
