Add Sandwich & Burger menu

--- a/tipper/menu.html
+++ b/tipper/menu.html
@@ -45,6 +45,7 @@
                                     </div>
                                     <hr />
 
+                                    <!-- Menu area -->
                                     <div class="12u table-wrapper menu_area">
                                     </div>
 
