Fix small typo in Burger menu

--- a/tipper/parts/menus/menu_4.html
+++ b/tipper/parts/menus/menu_4.html
@@ -45,12 +45,12 @@
         <tfoot>
             <tr>
                 <td></td>
-                <td>* served with a choice of soup.49, seafood chowder .99, or house salad, or hand cut fries</td>
+                <td>* served with a choice of soup .49, seafood chowder .99, or house salad, or hand cut fries</td>
                 <td></td>
             </tr>
             <tr>
                 <td></td>
-                <td>make it messy with sautéed basil garlic mushrooms 2.50, avocado 2.00, sauteed onions 2.00, real cheddar 1.25 and pepper bacon 2.00</td>
+                <td>* make it messy with sautéed basil garlic mushrooms 2.50, avocado 2.00, sauteed onions 2.00, real cheddar 1.25 and pepper bacon 2.00</td>
                 <td></td>
             </tr>
         </tfoot>
