--- a/tipper/index.html
+++ b/tipper/index.html
@@ -58,7 +58,10 @@
 							<div class="flex flex-2">
 								<div class="col col2">
 									<h3>More than a venue</h3>
-                                    <p><iframe width="560" height="315" src="https://www.youtube.com/embed/Z-YEHjfIi9I" frameborder="0" allowfullscreen></iframe></p>
+                                    <p>
+                                        <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style>
+                                        <div class='embed-container'><iframe src='https://www.youtube.com/embed/undefined' frameborder='0' allowfullscreen></iframe></div>
+                                    </p>
                                     <p>A short video put together by our friends at <a href ="http://www.youtube.com/user/DreamsaversProd">DREAMsavers Productions</a>.</p>
 								</div>
 								<div class="col col1 first">
