Change header style

--- a/tipper/parts/header.html
+++ b/tipper/parts/header.html
@@ -1,7 +1,7 @@
 <html>
 
     <header id="header">
-        <div class="logo"><a href="index.html">The <span>Tipper</span></a></div>
+        <div class="logo"><a href="index.html"><span>The</span> Tipper</a></div>
         <a href="#menu">Menu</a>
     </header>
 
