--- a/tipper/about.html
+++ b/tipper/about.html
@@ -37,7 +37,7 @@
                                 </div>
 								<div class="col col1 first">
 									<div class="image round fit">
-										<a href="generic.html" class="link"><img src="images/pic01.jpg" alt="" /></a>
+										<img src="images/pic01.jpg" alt="" />
 									</div>
 								</div>
 							</div>
