--- a/tipper/index.html
+++ b/tipper/index.html
@@ -35,10 +35,10 @@
 					<section class="wrapper style1">
 						<div class="inner">
 							<!-- 2 Columns -->
-								<div class="flex flex-2">
+								<div class="flex flex-3">
 									<div class="col col1">
 										<div class="image round fit">
-											<a href="generic.html" class="link"><img src="images/pic01.jpg" alt="" /></a>
+											<img src="images/pic01.jpg" alt="" />
 										</div>
 									</div>
 									<div class="col col2">
@@ -47,6 +47,11 @@
                                         <p>It is also the kind of place that customers have coined as one of the city’s hidden gems.</p>
                                         <p>“Simple, unassuming, and humbly fresh” says Shandler, describing both the atmosphere and the menu creations. Something he accredits to the hand-picked produce and meats from within the community.</p>
                                         <a href="about.html" class="button">Learn More</a>
+									</div>
+                                    <div class="col co3">
+                                        <h3>The Review Room</h3>
+    									<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+                                        <a href="review.html" class="button">Learn More</a>
 									</div>
 								</div>
 						</div>
@@ -60,13 +65,12 @@
 									<h3>More than a venue</h3>
                                     <p>
                                         <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style>
-                                        <div class='embed-container'><iframe src='https://www.youtube.com/embed/undefined' frameborder='0' allowfullscreen></iframe></div>
+                                        <div class='embed-container'><iframe src='https://www.youtube.com/embed/ITG4ETSl9ok' frameborder='0' allowfullscreen></iframe></div>
                                     </p>
-                                    <p>A short video put together by our friends at <a href ="http://www.youtube.com/user/DreamsaversProd">DREAMsavers Productions</a>.</p>
 								</div>
 								<div class="col col1 first">
 									<div class="image round fit">
-										<a href="generic.html" class="link"><img src="images/pic02.jpg" alt="" /></a>
+										<img src="images/pic02.jpg" alt="" />
 									</div>
 								</div>
 							</div>
@@ -86,7 +90,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</div>
 									<p>Check out the food...</p>
-									<a href="menu.html" class="button">Menu</a>
+									<a href="menu.html" class="button">Food Menus</a>
 								</div>
 								<div class="col align-center">
 									<div class="image round fit">
