--- a/tipper/join.html
+++ b/tipper/join.html
@@ -25,35 +25,26 @@
 						<div class="inner">
 							<header class="align-center">
 								<h1>Join us</h1>
-								<p>The Tipper is growing! The right candidate is invited to see if we are a fit, and if so apply for the positions.</p>
+								<p>The Tipper is growing! The right candidate is invited to see if we are a fit.</p>
 							</header>
 							<div class="flex flex-2">
 								<div class="col col2">
-                                    <h4>Available job openings</h4>
-                                    <dl>
-                                        <dt>First Cook</dt>
-                                        <dd>
-                                            <p></p>
-                                        </dd>
-                                        <dt>Host/Support</dt>
-                                        <dd>
-                                            <ul>
-                                                <li>Must have FOOD SAFE & Serving it Right</li>
-                                                <li>Works Clean & understands show kitchens and food safety</li>
-                                                <li>Respect for everyone including yourself</li>
-                                                <li>Is early for shifts as a rule</li>
-                                                <li>Can work with a small team</li>
-                                                <li>Dependable</li>
-                                                <li>Smiles, is fun and Respectfully doesn't talk too much.</li>
-                                                <li>Humble, willing to smooth in with our humble systems (the dance) and then add to it as needed</li>
-                                                <li>Leads by example</li>
-                                            </ul>
-                                        </dd>
-                                    </dl>
+                                    <h4>Qualifications</h4>
+                                    <ul>
+                                        <li>Must have FOOD SAFE & Serving it Right</li>
+                                        <li>Works Clean & understands show kitchens and food safety</li>
+                                        <li>Respect for everyone including yourself</li>
+                                        <li>Is early for shifts as a rule</li>
+                                        <li>Can work with a small team</li>
+                                        <li>Dependable</li>
+                                        <li>Smiles, is fun and Respectfully doesn't talk too much.</li>
+                                        <li>Humble, willing to smooth in with our humble systems (the dance) and then add to it as needed</li>
+                                        <li>Leads by example</li>
+                                    </ul>
                                 </div>
 								<div class="col col1 first">
 									<div class="image round fit">
-										<a href="generic.html" class="link"><img src="images/pic04.jpg" alt="" /></a>
+										<img src="images/pic04.jpg" alt="" />
 									</div>
 								</div>
 							</div>
