--- a/tipper/menu.html
+++ b/tipper/menu.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Menu</title>
+		<title>Food Menus</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,7 +24,7 @@
 					<section class="wrapper">
 						<div class="inner">
 							<header class="align-center">
-								<h1>Menu</h1>
+								<h1>Food Menus</h1>
 								<p>Check out the food!</p>
 							</header>
 							<div class="flex flex-2">
