--- a/tipper/parts/header.html
+++ b/tipper/parts/header.html
@@ -9,7 +9,7 @@
         <ul class="links">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
-            <li><a href="menu.html">Menu</a></li>
+            <li><a href="menu.html">Food Menus</a></li>
             <li><a href="contact.html">Contact us</a></li>
             <li><a href="join.html">Join us</a></li>
         </ul>
