Add Review Room to nav menu

--- a/tipper/parts/header.html
+++ b/tipper/parts/header.html
@@ -9,7 +9,8 @@
         <ul class="links">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
-            <li><a href="menu.html">Food Menus</a></li>
+            <li><a href="review.html">The Review Room</a></li>
+            <li><a href="menu.html">Food menus</a></li>
             <li><a href="contact.html">Contact us</a></li>
             <li><a href="join.html">Join us</a></li>
         </ul>
