--- a/tipper/index.html
+++ b/tipper/index.html
@@ -90,7 +90,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</div>
 									<p>Check out the food...</p>
-									<a href="menu.html" class="button">Food Menus</a>
+									<a href="menu.html" class="button">Food menus</a>
 								</div>
 								<div class="col align-center">
 									<div class="image round fit">
