--- a/tipper/review.html
+++ b/tipper/review.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Food menus</title>
+		<title>The Review Room</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,22 +24,22 @@
 					<section class="wrapper">
 						<div class="inner">
 							<header class="align-center">
-								<h1>Food menus</h1>
-								<p>Check out the food!</p>
+								<h1>The Review Room</h1>
+								<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
 							</header>
 							<div class="flex flex-2">
-
-                                    <!-- Menu select list -->
-                                    <div class="6u$ 12u$(xsmall) select-wrapper">
-                                        <select name="category" id="category" class="menu_select">
-                                        </select>
-                                    </div>
-                                    <hr />
-
-                                    <!-- Menu area -->
-                                    <div class="12u table-wrapper menu_area">
-                                    </div>
-
+								<div class="col col2">
+                                    <ul class="alt">
+                                        <li><h4>Interested in a booking?</h4>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</li>
+                                        <li><h4>Pricing</h4>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</li>
+                                        <li><h4>Contact</h4>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</li>
+                                    </ul>
+                                </div>
+								<div class="col col1 first">
+									<div class="image round fit">
+										<img src="images/pic06.jpg" alt="" />
+									</div>
+								</div>
 							</div>
 						</div>
 					</section>
@@ -57,7 +57,6 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="assets/js/foodmenus.js"></script>
 
 	</body>
 </html>
