--- a/tipper/contact.html
+++ b/tipper/contact.html
@@ -29,7 +29,7 @@
 							</header>
 							<div class="flex flex-2">
 								<div class="col col2">
-                                    <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2604.6838115989353!2d-123.06664278416548!3d49.24448368139711!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548676af56229279%3A0x6210953f8ae71d48!2s2066+Kingsway%2C+Vancouver%2C+BC+V5N+2T3!5e0!3m2!1sen!2sca!4v1510140861021" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2604.6838115989353!2d-123.06664278416548!3d49.24448368139711!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548676af56229279%3A0x6210953f8ae71d48!2s2066+Kingsway%2C+Vancouver%2C+BC+V5N+2T3!5e0!3m2!1sen!2sca!4v1510140861021" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                                 </div>
 								<div class="col col1 first">
                                     <ul class="alt">
