Some footer changes

--- a/tipper/parts/footer.html
+++ b/tipper/parts/footer.html
@@ -2,8 +2,10 @@
 
     <footer id="footer">
         <div class="copyright">
+            <h4>Follow on Social Media</h4>
             <ul class="icons">
-                <li><a href="https://www.instagram.com/thetipper_love/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+                <li><a href="https://www.instagram.com/thetipperrestaurant/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+                <li><a href="https://www.instagram.com/thetipper_love/" class="icon fa-heart"><span class="label">Instagram</span></a></li>
                 <li><a href="https://www.facebook.com/TheTipperRestaurant/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
                 <li><a href="https://twitter.com/TheTipper" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
             </ul>
