Fix About and Contacts contents

--- a/tipper/about.html
+++ b/tipper/about.html
@@ -31,8 +31,8 @@
 								<div class="col col2">
 									<h3>The Tipper as Brenna F sees it</h3>
                                     <p>The Review Room in the back not only provides a venue for performers but also plays host to community events on any given day of the week.
-                                    When the Revue Room, a private performance and meeting space set in the back half of the restaurant isn’t housing local music collectives The Tipper hosts AA meetings Thursday and Sunday of every week, and a parents and tot play group on Fridays.</p>
-                                    <p>Whether enjoying free run eggs and bacon for breakfast (served every day until 5pm), or a free run “Cliff and Ed” cajun chicken burger with home cut yam fries for dinner, the menu also includes several vegetarian, vegan, and gluten-free options, and home-made hollandaise sauce for weekend bennies, and other home-made sauces and soups all week.
+                                    When the Review Room, a private performance and meeting space set in the back half of the restaurant isn’t housing local music collectives The Tipper hosts AA meetings Thursday and Sunday of every week, and a parents and tot play group on Fridays.</p>
+                                    <p>Whether enjoying free run eggs and bacon for breakfast (served every day until 4pm), or a free run “Cliff and Ed” cajun chicken burger with home cut yam fries for dinner, the menu also includes several vegetarian, vegan, and gluten-free options, and home-made hollandaise sauce for weekend bennies, and other home-made sauces and soups all week.
                                     However, The Tipper experience does not end with what comes out of the kitchen, the bar too consists of unique spirits and local draught, and Vancouver’s own JJ Bean coffee.</p>
                                 </div>
 								<div class="col col1 first">
