--- a/tipper/contact.html
+++ b/tipper/contact.html
@@ -33,7 +33,7 @@
                                 </div>
 								<div class="col col1 first">
                                     <ul class="alt">
-                                        <li><h4>Address</h4>2066 Kingsway, Vancouver, BC 5N2T3</li>
+                                        <li><h4>Address</h4>2066 Kingsway, Vancouver, BC V5N 2T3</li>
                                         <li><h4>Phone</h4>604-873-1010</li>
                                         <li><h4>Fax</h4>604-873-1070</li>
                                         <li><h4>Email</h4><a href="mailto:feedback@thetipperrestaurant.com">feedback@thetipperrestaurant.com</a></li>
