More changes to Review Room

--- a/tipper/index.html
+++ b/tipper/index.html
@@ -50,7 +50,7 @@
 									</div>
                                     <div class="col co3">
                                         <h3>The Review Room</h3>
-    									<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+    									<p>The Review Room hosts a variety of community events ranging from live band perfomances to social gatherings.</p>
                                         <a href="review.html" class="button">Learn More</a>
 									</div>
 								</div>
