--- a/tipper/join.html
+++ b/tipper/join.html
@@ -32,12 +32,12 @@
                                     <h4>Qualifications</h4>
                                     <ul>
                                         <li>Must have FOOD SAFE & Serving it Right</li>
-                                        <li>Works Clean & understands show kitchens and food safety</li>
-                                        <li>Respect for everyone including yourself</li>
+                                        <li>Works clean & understands show kitchens and food safety</li>
+                                        <li>Respect for everyone, including yourself</li>
                                         <li>Is early for shifts as a rule</li>
                                         <li>Can work with a small team</li>
                                         <li>Dependable</li>
-                                        <li>Smiles, is fun and Respectfully doesn't talk too much.</li>
+                                        <li>Smiles, is fun and respectfully doesn't talk too much</li>
                                         <li>Humble, willing to smooth in with our humble systems (the dance) and then add to it as needed</li>
                                         <li>Leads by example</li>
                                     </ul>
