--- a/tipper/parts/footer.html
+++ b/tipper/parts/footer.html
@@ -8,6 +8,7 @@
                 <li><a href="https://www.instagram.com/thetipper_love/" class="icon fa-heart"><span class="label">Instagram</span></a></li>
                 <li><a href="https://www.facebook.com/TheTipperRestaurant/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
                 <li><a href="https://twitter.com/TheTipper" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="https://thetipperrestaurant.blogspot.ca/" class="icon fa-sticky-note"><span class="label">Blogspot</span></a></li>
             </ul>
             <p>Design: Urban by <a href="https://templated.co">TEMPLATED</a>.</p>
         </div>
