--- a/tipper/review.html
+++ b/tipper/review.html
@@ -25,14 +25,16 @@
 						<div class="inner">
 							<header class="align-center">
 								<h1>The Review Room</h1>
-								<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
 							</header>
 							<div class="flex flex-2">
 								<div class="col col2">
                                     <ul class="alt">
-                                        <li><h4>Interested in a booking?</h4>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</li>
-                                        <li><h4>Pricing</h4>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</li>
-                                        <li><h4>Contact</h4>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</li>
+                                        <li>
+                                            <h4>Interested in a booking?</h4>
+                                            <p>A spacious, comfy setting located in the back of the restaurant.</p>
+                                            <p>Book with us for your next community event, group meeting, birthday, show or celebration!</p>
+                                        </li>
+                                        <li><h4>Contact</h4>Please call us at 604-873-1010 for pricing and scheduling details.</li>
                                     </ul>
                                 </div>
 								<div class="col col1 first">
